--- a/chat/index.html
+++ b/chat/index.html
@@ -3,14 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <title>Pastel CO</title>
-    <link rel="stylesheet" href="./events.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div id="status"></div>
     <div class="main">
-      <div id="welcome-container"></div>
-      <div id="gift-container"></div>
+      <div id="chat"></div>
     </div>
-    <script src="./events.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
